--- a/Python Coursework Notebook.ipynb
+++ b/Python Coursework Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "88c99dc4",
+   "id": "e0d0666e",
    "metadata": {},
    "source": [
     "## Task 1"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0d685d",
+   "id": "f17185ac",
    "metadata": {},
    "source": [
     "### Binary numbers"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d53b87b8",
+   "id": "74de7ed2",
    "metadata": {},
    "source": [
     "In this exercise, the inputs are positive integers so we define an assertions \n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "db0bc883",
+   "id": "d9d5cc5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ebcfd9a",
+   "id": "38d532c0",
    "metadata": {},
    "source": [
     "The first function returns the sum of digits of a number when it is written in binary. We run this function for num=12."
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b2685304",
+   "execution_count": 2,
+   "id": "8db4b1b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7da46744",
+   "execution_count": 3,
+   "id": "7423af17",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa6a7df",
+   "id": "2d00caf4",
    "metadata": {},
    "source": [
     "We now write the binary representation of a number (given in base 10) as a list."
@@ -97,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d0d93b44",
+   "execution_count": 4,
+   "id": "44fc6f5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e972579c",
+   "execution_count": 5,
+   "id": "6c8e88b1",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b962dfa9",
+   "id": "64264e0b",
    "metadata": {},
    "source": [
     "### Groups of people"
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a986252",
+   "id": "ef8c008d",
    "metadata": {},
    "source": [
     "We now write a function that computes the number of ways we can split a group of people in two."
@@ -148,8 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "fa6f2688",
+   "execution_count": 6,
+   "id": "45ec4d13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4bb51d7c",
+   "execution_count": 7,
+   "id": "b2cf8873",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b707e2",
+   "id": "619a9507",
    "metadata": {},
    "source": [
     "Finally we write a function that returns the possible combinations of half-groups that can be formed from the original group."
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "60e750b2",
+   "execution_count": 8,
+   "id": "add68925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,8 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1d16ea4b",
+   "execution_count": 9,
+   "id": "a1a622e8",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdcb269",
+   "id": "bfae50e5",
    "metadata": {},
    "source": [
     "# Stable Marriage Problem"
@@ -244,8 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "dcec317c",
+   "execution_count": 1,
+   "id": "9fd1328c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13eb1d2b",
+   "id": "1ec51630",
    "metadata": {},
    "source": [
     "## Task 2"
@@ -265,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "25334c05",
+   "execution_count": 2,
+   "id": "6a226a41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "d47e831e",
+   "execution_count": 3,
+   "id": "b94ef160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
     "    \n",
     "    def consistent_dimension(self) -> bool: \n",
     "        '''Assesses whether the table preference lists have consistent dimensions'''\n",
-    "        n: int = len(self[next(iter(self))])\n",
+    "        n: int = len(self)\n",
     "        return all(len(x) == n for x in self.values())\n",
     "        \n",
     "    def no_duplicates(self) -> bool:\n",
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "2ed0d540",
+   "execution_count": 4,
+   "id": "392ef95c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,8 +339,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "4c6b2989",
+   "execution_count": 5,
+   "id": "03c19886",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53840cc8",
+   "id": "53638f64",
    "metadata": {},
    "source": [
     "## Task 3"
@@ -397,8 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "b88f3499",
+   "execution_count": 6,
+   "id": "78b34258",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,8 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "d64ca7d9",
+   "execution_count": 7,
+   "id": "09566364",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3dbe314",
+   "id": "2a3d37d1",
    "metadata": {},
    "source": [
     "## Task 4"
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "bc40043e",
+   "execution_count": 8,
+   "id": "b64ffd72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d03e61a",
+   "id": "0b848dd1",
    "metadata": {},
    "source": [
     "## Task 5"
@@ -511,8 +511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "70703fc9",
+   "execution_count": 12,
+   "id": "7e5e36b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c194f26",
+   "id": "c0c46660",
    "metadata": {},
    "source": [
     "## Task 6"
@@ -544,8 +544,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "3a16e4b7",
+   "execution_count": 13,
+   "id": "e0d8dff3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10802eef",
+   "id": "61a978eb",
    "metadata": {},
    "source": [
     "## Task 7"
@@ -574,8 +574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "0e68df23",
+   "execution_count": 14,
+   "id": "52c69282",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,8 +603,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "50e9b6a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
-   "id": "c4e287ab",
+   "id": "e24a845a",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "006a63cd",
+   "id": "4d1c3877",
    "metadata": {},
    "source": [
     "## Task 8"
@@ -643,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "57bc4565",
+   "id": "2185aabd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "2a90b6aa",
+   "id": "e5e4cd03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "e547fe95",
+   "id": "926dcc23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0b5b0001",
+   "id": "06652350",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "54243326",
+   "id": "091ce3df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "07c5ed49",
+   "id": "5212fd00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "9a43bf47",
+   "id": "7a927621",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "1b87365e",
+   "id": "e301fd76",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4268d29",
+   "id": "b76896e1",
    "metadata": {},
    "source": [
     "## Task 9"
@@ -797,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "20009036",
+   "id": "0a8a58aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "236719b4",
+   "id": "7d607e40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "793372a0",
+   "id": "8eb74fe6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "fa9f4265",
+   "id": "e0259fb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "9b69b4d7",
+   "id": "667b85f1",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "7b13fbd3",
+   "id": "00e5402f",
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "0f1eb9a2",
+   "id": "f7d5cd7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "88aa9df2",
+   "id": "b02d348b",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ebb4fab",
+   "id": "45f7e937",
    "metadata": {},
    "source": [
     "## Task 10"
@@ -966,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26a8ffc",
+   "id": "70526bb2",
    "metadata": {},
    "source": []
   }
