comments in notebook

--- a/Python Coursework Notebook.ipynb
+++ b/Python Coursework Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c2af3e7",
+   "id": "7ee50cbc",
    "metadata": {},
    "source": [
     "## Task 1"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bafc8e0c",
+   "id": "529cf370",
    "metadata": {},
    "source": [
     "### Binary numbers"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec802d83",
+   "id": "a8f774cf",
    "metadata": {},
    "source": [
     "In this exercise, the inputs are positive integers so we define an assertions \n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0cf17587",
+   "id": "008974d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc5bf93c",
+   "id": "730e4d75",
    "metadata": {},
    "source": [
     "The first function returns the sum of digits of a number when it is written in binary. We run this function for num=12."
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "47be5cb1",
+   "id": "62abddb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a8302dad",
+   "id": "e28c272f",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bd7ab2",
+   "id": "bb26a3a3",
    "metadata": {},
    "source": [
     "We now write the binary representation of a number (given in base 10) as a list."
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bc7b31e0",
+   "id": "cc0756e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "24c06bb8",
+   "id": "b1cb4aef",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61fbc2c5",
+   "id": "29df5463",
    "metadata": {},
    "source": [
     "### Groups of people"
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "636dfb40",
+   "id": "a49c99c5",
    "metadata": {},
    "source": [
     "We now write a function that computes the number of ways we can split a group of people in two."
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f34e2961",
+   "id": "33dcd2c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2868c965",
+   "id": "3814955a",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "356dcb69",
+   "id": "78a0cfd1",
    "metadata": {},
    "source": [
     "Finally we write a function that returns the possible combinations of half-groups that can be formed from the original group."
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9b9ff877",
+   "id": "ee147d87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "98e83d0b",
+   "id": "652aa91a",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbfc80fe",
+   "id": "1a922156",
    "metadata": {},
    "source": [
     "# Stable Matching Problem"
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9628d80",
+   "id": "a0396154",
    "metadata": {},
    "source": [
     "Consider two groups of people of equal size $n$; the proposers and the acceptors (men and women in Stable Marriage Problem).\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9a6970e8",
+   "id": "24afc88c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa102d45",
+   "id": "5775c5d1",
    "metadata": {},
    "source": [
     "## Task 2"
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e03c1c",
+   "id": "dad8780e",
    "metadata": {},
    "source": [
     "There are multiple ways of representing preference tables. A simple approach is to represent them as \n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "33233f00",
+   "id": "f2e15045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e515ce7f",
+   "id": "9280e54a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6c2458f5",
+   "id": "1b0322af",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79630e2f",
+   "id": "e75b2049",
    "metadata": {},
    "source": [
     "We can extend this class by adding two more methods. \n",
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "67237fc5",
+   "id": "ceec98e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c8d55226",
+   "id": "cb9bd1d5",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4e2b532",
+   "id": "43c87702",
    "metadata": {},
    "source": [
     "The matching (mapping proposers -> acceptors) will be represented as Dict[Sym,Sym] with proposers and acceptors as keys and values respectively. "
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bc60493",
+   "id": "cfcfd5b8",
    "metadata": {},
    "source": [
     "## Task 3"
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7597ddaf",
+   "id": "a8fa2c6e",
    "metadata": {},
    "source": [
     "We may also want to randomize preference tables. To do so, we extend the Table class to Random_Table and add a method generate_random_table, which takes two sequences of symbols key_syms and val_syms (if they are not given, it uses range(n) as a default for both of them) and returns a preference table (which is then passed to the superclass Table). <br> \n",
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b3be2934",
+   "id": "6747c0d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a4834597",
+   "id": "0263866e",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d7acbc5",
+   "id": "23123d5c",
    "metadata": {},
    "source": [
     "## Task 4"
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19d4562",
+   "id": "6f89163e",
    "metadata": {},
    "source": [
     "The Stable_Matching class takes two preference tables and validates that the elements of the preference lists of one table \n",
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "206b2f80",
+   "id": "6a71baf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5131821a",
+   "id": "3d4ac7b6",
    "metadata": {},
    "source": [
     "## Task 5"
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76cdf9d6",
+   "id": "49b26950",
    "metadata": {},
    "source": [
     "Another method in the Stable_Matching class is matching_is_stable which takes a matching (as a Dict[Sym,Sym]) and returns True if the matching is stable and False otherwise. <br>\n",
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "45219aec",
+   "id": "adbb23c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "002002aa",
+   "id": "162bc852",
    "metadata": {},
    "source": [
     "## Task 6"
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c094dba4",
+   "id": "ce07a26e",
    "metadata": {},
    "source": [
     "compute_score returns two scores; one for the proposers, the second for the acceptors. <br>\n",
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7dc305c7",
+   "id": "4ade3745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c7c8f8",
+   "id": "4f12023f",
    "metadata": {},
    "source": [
     "## Task 7"
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f639084",
+   "id": "1f19cf26",
    "metadata": {},
    "source": [
     "Finally, the solve_problem method solves the Stable Matching Problem for the given preference tables and returns a matching.<br>\n",
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8cfc3b6d",
+   "id": "74e74502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f5444d08",
+   "id": "69ff10c0",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7275ed",
+   "id": "769a87e2",
    "metadata": {},
    "source": [
     "## Task 8"
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeeffa5a",
+   "id": "df9c18eb",
    "metadata": {},
    "source": [
     "A performance analysis of Stable_Marriage follows. <br>"
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "00cc239f",
+   "id": "4fb956a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4d1203e1",
+   "id": "127925e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "30fd1f73",
+   "id": "28695e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9158ea3",
+   "id": "7919752a",
    "metadata": {},
    "source": [
     "For the given example that we have considered before, we find its average execution time."
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3b6c7fe6",
+   "id": "797ec9df",
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da562ac2",
+   "id": "a790ff9f",
    "metadata": {},
    "source": [
     "We now consider random preference tables of size $n$. We plot the average execution time as we vary $n$."
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0691db02",
+   "id": "a2cdb23e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a1ad216a",
+   "id": "4f993b9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b7a4a10a",
+   "id": "9afbf27e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccada502",
+   "id": "773e0768",
    "metadata": {},
    "source": [
     "The theoretical (worst case scenario) time complexity of Stable Matching is $\\mathcal{O} (n^2)$. \n",
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4a5a6f4e",
+   "id": "e68c9d05",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c25a8c",
+   "id": "4f2f616e",
    "metadata": {},
    "source": [
     "Note that $B<2$, so the expected time is a bit faster than the worst case scenario (not sure whether that is a statistically significant claim)"
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "97cfac22",
+   "id": "7447a285",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef21e1f1",
+   "id": "cd7e9fb1",
    "metadata": {},
    "source": [
     "## Task 9"
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ced68f7e",
+   "id": "8a3b0914",
    "metadata": {},
    "source": [
     "Finally, we consider the score distributions for proposers and acceptors for different values of $n$."
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "846822d4",
+   "id": "a41f6525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d6881a72",
+   "id": "bdbc3a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "71861101",
+   "id": "04c957c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "811df62c",
+   "id": "4d65d6b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "89cfae90",
+   "id": "7a559b20",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "74830c3b",
+   "id": "e9e3507b",
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38288523",
+   "id": "6c187a39",
    "metadata": {},
    "source": [
     "We observe that the acceptor scores are generally higher and the distributions get further and further apart as we increase $n$. <br> \n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "97668c10",
+   "id": "5220bbb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4ed265e4",
+   "id": "6a8968cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0d6c0685",
+   "id": "f5a18e91",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa0b6c90",
+   "id": "64df64bf",
    "metadata": {},
    "source": [
     "As you can see from the whisker plot in loglog axis, there is a linear relationship between $\\log S$ and $\\log n$, \n",
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ddd17d57",
+   "id": "40bbfb49",
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0390244",
+   "id": "b48fb949",
    "metadata": {},
    "source": [
     "## Task 10"
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c84c8050",
+   "id": "3252b779",
    "metadata": {},
    "source": [
     "We now assess whether the code follows the 5 R's as defined by [Benureau and Rougier](https://www.frontiersin.org/articles/10.3389/fninf.2017.00069/full). <br> \n",
@@ -1268,12 +1268,12 @@
     "2. <b> Repeatable</b>; by setting seeds whenever there is randomness, we ensure that the output is always the same (until the seed functions change...). However, we are not saving the outputs of the code to text files, so one has to qualitatively assess whether the outcomes are similar or not.   \n",
     "3. <b> Reproducible</b>; there are many validation methods for the preference tables which would return errors if they are misspecified. However, the git status is not examined to see whether there is any code impurity and results are not saved. Furthermore, time performance of the algorithm will be different depending on the machine. Finally, in the Table class one can add more keys later on without triggering any validation method. I wasn't sure how to get around that. \n",
     "4. <b> Reusable</b>; some documentation is given in this notebook, describing the code and the functions (one can run help(fun) to get the description of that function, class method or class). \n",
-    "5. <b> Repeatable</b>; test cases have not been considered in this project. Ideally, before even starting the project one must clearly establish all tests to be "
+    "5. <b> Repeatable</b>; test cases have not been considered in this project. Ideally, before even starting the project one must clearly establish all tests to be used in this project, without being able to push code that violates test cases."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "57c5998e",
+   "id": "553e22ef",
    "metadata": {},
    "source": [
     "Final note; classes Table, Random_Table, Stable_Matching can be found (better written) in stable_matching.py."
